@@ -132,7 +132,8 @@ public class ElementLibrary implements Iterable<ElementLibrary.ElementContainer>
                 .add(new LibraryNode(Lang.get("lib_mux"))
                         .add(Multiplexer.DESCRIPTION)
                         .add(Demultiplexer.DESCRIPTION)
-                        .add(Decoder.DESCRIPTION))
+                        .add(Decoder.DESCRIPTION)
+                        .add(BitSelector.DESCRIPTION))
                 .add(new LibraryNode(Lang.get("lib_flipFlops"))
                         .add(FlipflopRSAsync.DESCRIPTION)
                         .add(FlipflopRS.DESCRIPTION)
